2009-11-13  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.el (org-clone-subtree-with-time-shift): Make it work at the
	end of the buffer.

	* org-mobile.el (org-mobile-write-checksums): Specify coding
	system.
	(org-mobile-timestamp-buffer): Keep local variable/mode line at
	beginning of buffer.

	* org-latex.el (org-latex-entities-regexp): Fix typo in regexp.

	* org.el (org-block-todo-from-children-or-siblings-or-parent)
	(org-block-todo-from-checkboxes): Do not block changes to a nil
	TODO state.

2009-11-13  James TD Smith  <ahktenzero@mohorovi.cc>

	* org-habit.el (org-habit-parse-todo): Indicate which habit is
	wrongly set up in the error messages.

	* org-colview.el (org-columns-display-here): Don't try to
	calculate values if the underlying property is not set.
	(org-columns-string-to-number): Convert age strings back into
	fractional days.
	(org-agenda-colview-summarize): Handle extended summary types
	properly.

	* org-colview-xemacs.el (org-columns-display-here): Don't try to
	calculate values if the underlying property is not set.
	(org-columns-string-to-number): Convert age strings back into
	fractional days.
	(org-agenda-colview-summarize): Handle extended summary types
	properly.

2009-11-13  Carsten Dominik  <carsten.dominik@gmail.com>

	* org-exp.el (org-export-format-drawer-function): New variable.
	(org-export-format-drawer): New function.
	(org-export-preprocess-string): Pass the backend as a parameter to
	`org-export-remove-or-extract-drawers'.
	(org-export-remove-or-extract-drawers): New parameter BACKEND.

	* org-protocol.el (org-protocol-char-to-string): New defsubst.

2009-11-13  Carsten Dominik  <carsten.dominik@gmail.com>

	* org-agenda.el (org-agenda-diary-entry-in-org-file): Add error
	message when no block is selected.

	* org-latex.el (org-export-latex-links): Check for protectedness
	in the last matched character, not after the match.

	* org-datetree.el (org-datetree-find-date-create): Respect